tests/ui/imports/ambiguous-panic-pick-std.stderr
warning: `panic` is ambiguous
  --> $DIR/ambiguous-panic-pick-std.rs:7:5
   |
LL |     panic!(std::string::String::new());
   |     ^^^^^ ambiguous name
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #147319 <https://github.com/rust-lang/rust/issues/147319>
   = note: ambiguous because of a conflict between a name from a glob import and an outer scope during import or macro resolution
note: `panic` could refer to the macro imported here
  --> $DIR/ambiguous-panic-pick-std.rs:3:5
   |
LL | use ::core::prelude::v1::*;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `panic` to disambiguate
   = help: or use `crate::panic` to refer to this macro unambiguously
note: `panic` could also refer to a macro from prelude
  --> $SRC_DIR/std/src/prelude/mod.rs:LL:COL
   = note: `#[warn(ambiguous_panic_imports)]` (part of `#[warn(future_incompatible)]`) on by default

error[E0308]: mismatched types
  --> $DIR/ambiguous-panic-pick-std.rs:7:12
   |
LL |     panic!(std::string::String::new());
   |     -------^^^^^^^^^^^^^^^^^^^^^^^^^^-
   |     |      |
   |     |      expected `&str`, found `String`
   |     arguments to this function are incorrect
   |
note: function defined here
  --> $SRC_DIR/core/src/panicking.rs:LL:COL
help: consider borrowing here
   |
LL |     panic!(&std::string::String::new());
   |            +

error: aborting due to 1 previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
